fixing alignments and adding more style

--- a/css/screen.css
+++ b/css/screen.css
@@ -1,8 +1,19 @@
 body {
   justify-content: center;
   align-items: center;
-  background-color: rgb(68, 68, 68);
+  background-color: rgb(255, 255, 255);
   padding: 20px;
+}
+
+.container {
+  font-family: 'Work One', 'Open Sans', sans-serif;
+  background-color: rgb(255, 255, 255);
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 15px rgba(72, 72, 72, 0.32);
+  max-width: 500px;
+  width: 100%;
+  text-align: center;
 }
 
 h1 {
@@ -12,20 +23,31 @@ h1 {
   font-size: 2em;
 }
 
-.container {
-  font-family: 'Work One', 'Open Sans', sans-serif;
-  background-color: rgb(255, 255, 255);
-  padding: 30px;
-  border-radius: 5px;
-  box-shadow: 0px 0px 15px rgba(72, 72, 72, 0.32);
-  width: 500px;
+h2 {
+  font-size: 1em;
+  padding-bottom: 10px;
+}
+
+h3 {
+  font-size: .9em;
+  padding-bottom: 10px;
 }
 
 .container p {
   padding-bottom: 10px;
-  text-align: center;
+  text-align: left;
+  margin: 10px;
+  font-weight: bold;
 }
 
 .form_elements {
   text-align: center;
+}
+
+.form_group input {
+  width: 90%;
+  border: none;
+  border-radius: 5px;
+  height: 40px;
+  margin-bottom: 15px;
 }
